Add face comparison tools and enhance logging configuration for MCP server. Optimized Dockerfile.